force-app/main/default/objects/EI_Site__c/fields/DR_SM_Status_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_SM_Status_EI__c</fullName>
    <description>SM Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SM Status</inlineHelpText>
    <label>SM Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>