force-app/main/default/objects/EI_Site__c/fields/DR_Smart_Rate_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Smart_Rate_Ind_EI__c</fullName>
    <description>Smart Rate Ind</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Smart Rate Ind</inlineHelpText>
    <label>Smart Rate Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>