force-app/main/default/objects/EI_Site__c/fields/DR_SR_Bill_Protection_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_SR_Bill_Protection_EI__c</fullName>
    <description>SR Bill Protection</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SR Bill Protection</inlineHelpText>
    <label>SR Bill Protection</label>
    <length>1</length>
    <type>Text</type>
</CustomField>