force-app/main/default/objects/EI_Site__c/fields/DR_Uniq_SA_ID_Create_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Uniq_SA_ID_Create_Date_EI__c</fullName>
    <description>Unique SA ID Create Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique SA ID Create Date</inlineHelpText>
    <label>Unique SA ID Create Date</label>
    <type>Date</type>
</CustomField>