force-app/main/default/objects/EI_Site__c/fields/DR_Uniq_SA_ID_Warn_Flag_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Uniq_SA_ID_Warn_Flag_EI__c</fullName>
    <description>Unique SA ID Warn Flag</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique SA ID Warn Flag</inlineHelpText>
    <label>Unique SA ID Warn Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>