force-app/main/default/objects/EI_Site__c/fields/DR_Uniq_SA_UUID_EI__c.field-meta.xml
<CustomField>
    <fullName>DR_Uniq_SA_UUID_EI__c</fullName>
    <description>Unique SA UUID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique SA UUID</inlineHelpText>
    <label>Unique SA UUID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>