force-app/main/default/objects/EI_Site__c/fields/EHEAT_EI__c.field-meta.xml
<CustomField>
    <fullName>EHEAT_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Electric SA Exists (EHEAT)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>