force-app/main/default/objects/EI_Site__c/fields/EI_Old_Id_DM__c.field-meta.xml
<CustomField>
    <fullName>EI_Old_Id_DM__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to map old instance primary object ids</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Used to map old instance primary object ids</inlineHelpText>
    <label>Old Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>