force-app/main/default/objects/EI_Site__c/fields/EI_Premise__c.field-meta.xml
<CustomField>
    <fullName>EI_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The premise object that the site/SA is pointing to.</description>
    <inlineHelpText>The premise object that the site/SA is pointing to.</inlineHelpText>
    <label>Premise</label>
    <referenceTo>EI_PREMISE__c</referenceTo>
    <relationshipLabel>Site/Service Agreements</relationshipLabel>
    <relationshipName>Site_Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>