force-app/main/default/objects/EI_Site__c/fields/Email_EI__c.field-meta.xml
<CustomField>
    <fullName>Email_EI__c</fullName>
    <description>Contact email for the premise</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Contact email for the premise</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>