force-app/main/default/objects/EI_Site__c/fields/Energy_Alert_Signed_Up_DateTime_EI__c.field-meta.xml
<CustomField>
    <fullName>Energy_Alert_Signed_Up_DateTime_EI__c</fullName>
    <description>Energy Alert Signed Up DateTime</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Energy Alert Signed Up DateTime</inlineHelpText>
    <label>Energy Alert Signed Up DateTime</label>
    <type>DateTime</type>
</CustomField>