force-app/main/default/objects/EI_Site__c/fields/Energy_Alerts_Signed_Up_EI__c.field-meta.xml
<CustomField>
    <fullName>Energy_Alerts_Signed_Up_EI__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Signed up for Energy Alerts.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Signed up for Energy Alerts.</inlineHelpText>
    <label>Energy Alert Signed Up</label>
    <length>1</length>
    <type>Text</type>
</CustomField>