force-app/main/default/objects/EI_Site__c/fields/Energy_Intensity_Score_EI__c.field-meta.xml
<CustomField>
    <fullName>Energy_Intensity_Score_EI__c</fullName>
    <label>Energy Intensity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>