force-app/main/default/objects/EI_Site__c/fields/Energy_Svc_Provider_EI__c.field-meta.xml
<CustomField>
    <fullName>Energy_Svc_Provider_EI__c</fullName>
    <description>Name of the provider if not PG&amp;E</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the provider if not PG&amp;E</inlineHelpText>
    <label>Energy Service Provider</label>
    <length>12</length>
    <type>Text</type>
</CustomField>