force-app/main/default/objects/EI_Site__c/fields/EPA_Benchmark_Score_EI__c.field-meta.xml
<CustomField>
    <fullName>EPA_Benchmark_Score_EI__c</fullName>
    <label>EPA Benchmark Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>