force-app/main/default/objects/EI_Site__c/fields/External_ID_EI__c.field-meta.xml
<CustomField>
    <fullName>External_ID_EI__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique identifier for this record that can serve as a key into a different system and used for &apos;upsert&apos; operations. Can be used to store any unique value.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>A unique identifier for this record that can serve as a key into a different system and used for &apos;upsert&apos; operations. Can be used to store any unique value.</inlineHelpText>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>