force-app/main/default/objects/EI_Site__c/fields/External_Timestamp_EI__c.field-meta.xml
<CustomField>
    <fullName>External_Timestamp_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Timestamp</label>
    <length>14</length>
    <type>Text</type>
</CustomField>