force-app/main/default/objects/EI_Site__c/fields/F_24hr_Discn_Ntc_12_Mo_EI__c.field-meta.xml
<CustomField>
    <fullName>F_24hr_Discn_Ntc_12_Mo_EI__c</fullName>
    <description>If populated and value is within the past year, Yes, otherwise No</description>
    <formula>IF( 
Twenty_Four_Hr_NtcDate_EI__c   &gt;=  (TODAY() - 365), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>24hr Disconnect Notice (Past 12 Months)</label>
    <type>Text</type>
</CustomField>