force-app/main/default/objects/EI_Site__c/fields/F_Account_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>F_Account_Customer_Name__c</fullName>
    <description>As part of encryption case 00276311, creating a formula field for Account.Name to display encrypted Customer Name (api: Encrypted_Account_Name__c) since Account.Name is overwritten with AccountNumber</description>
    <formula>Account_EI__r.Encrypted_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Customer Name</label>
    <type>Text</type>
</CustomField>