force-app/main/default/objects/EI_Site__c/fields/F_Avg_Bill_Amount_EI__c.field-meta.xml
<CustomField>
    <fullName>F_Avg_Bill_Amount_EI__c</fullName>
    <description>Average bill amount based on all related usage records.</description>
    <formula>IF( ISNULL( Usage_Billing_Amount_EI__c ) ,0,
IF(Usage_Billing_Amount_EI__c =0,0,
Usage_Billing_Amount_EI__c / Number_Usage_Records_EI__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average bill amount based on all related usage records.</inlineHelpText>
    <label>Avg Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>