force-app/main/default/objects/EI_Site__c/fields/F_Avg_Usage_EI__c.field-meta.xml
<CustomField>
    <fullName>F_Avg_Usage_EI__c</fullName>
    <description>Average usage based on all related usage records.</description>
    <formula>IF( ISNULL( Total_Usage_Value_Rollup_EI__c ) ,0,
IF(Total_Usage_Value_Rollup_EI__c =0,0,
Total_Usage_Value_Rollup_EI__c / Number_Usage_Records_EI__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average usage based on all related usage records.</inlineHelpText>
    <label>Avg Usage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>