force-app/main/default/objects/EI_Site__c/fields/F_CARE_Recently_Moved_EI__c.field-meta.xml
<CustomField>
    <fullName>F_CARE_Recently_Moved_EI__c</fullName>
    <description>CARE Recently Moved within 90 days</description>
    <formula>IF (   ISBLANK(CARE_Moved_In_Date_EI__c), false, 
 IF (   today() - CARE_Moved_In_Date_EI__c  &lt;= 730, true, false  )    

)</formula>
    <inlineHelpText>CARE Recently Moved within 90 days</inlineHelpText>
    <label>CARE Recently Moved</label>
    <type>Checkbox</type>
</CustomField>