force-app/main/default/objects/EI_Site__c/fields/F_IsActive_Formula_EI__c.field-meta.xml
<CustomField>
    <fullName>F_IsActive_Formula_EI__c</fullName>
    <formula>IF( (SA_Start_Date_EI__c == SA_End_Date_EI__c), &apos;false&apos;, IF(OR(Svc_Status_Code_EI__c==&apos;10&apos;,Svc_Status_Code_EI__c==&apos;20&apos;),&apos;true&apos;,&apos;false&apos;))</formula>
    <label>IsActive Formula</label>
    <type>Text</type>
</CustomField>