force-app/main/default/objects/EI_Site__c/fields/F_Sector_EI__c.field-meta.xml
<CustomField>
    <fullName>F_Sector_EI__c</fullName>
    <description>Sector of the associated NAICS Code</description>
    <formula>TEXT(NAICS_Code_relation_EI__r.Sector_EI__c)</formula>
    <inlineHelpText>Sector of the associated NAICS Code</inlineHelpText>
    <label>Sector</label>
    <type>Text</type>
</CustomField>