force-app/main/default/objects/EI_Site__c/fields/F_Svc_Status_EI__c.field-meta.xml
<CustomField>
    <fullName>F_Svc_Status_EI__c</fullName>
    <formula>CASE( Svc_Status_Code_EI__c ,
&apos;05&apos;, &apos;Incomplete&apos;,
&apos;10&apos;, &apos;Pending Start&apos;,
&apos;20&apos;, &apos;Active&apos;,
&apos;30&apos;, &apos;Pending Stop&apos;,
&apos;40&apos;, &apos;Stopped&apos;,
&apos;50&apos;, &apos;Reactivated&apos;,
&apos;60&apos;, &apos;Closed&apos;,
&apos;70&apos;, &apos;Canceled&apos;,
&apos;99&apos;, &apos;Delete&apos;,
&apos;Unknown&apos;)</formula>
    <label>Service Status</label>
    <type>Text</type>
</CustomField>