force-app/main/default/objects/EI_Site__c/fields/F_Total_Elec_Usage_EI__c.field-meta.xml
<CustomField>
    <fullName>F_Total_Elec_Usage_EI__c</fullName>
    <description>Copies Total Usage Value (Rollup) IF Service Type = E</description>
    <formula>IF( Svc_Type_Code_EI__c =&quot;E&quot;, Total_Usage_Value_Rollup_EI__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Electric Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>