force-app/main/default/objects/EI_Site__c/fields/Gas_SAID_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Gas_SAID_Code_EI__c</fullName>
    <defaultValue>&quot;0000000000&quot;</defaultValue>
    <description>&apos;Service Agreement&apos; ID for the site.  Typically the gas meter number.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>&apos;Service Agreement&apos; ID for the site.  Typically the gas meter number.</inlineHelpText>
    <label>Gas SAID Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>