force-app/main/default/objects/EI_Site__c/fields/High_Bill_Signed_Up_DateTime_EI__c.field-meta.xml
<CustomField>
    <fullName>High_Bill_Signed_Up_DateTime_EI__c</fullName>
    <description>High Bill Signed Up DateTime</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>High Bill Signed Up DateTime</inlineHelpText>
    <label>High Bill Signed Up DateTime</label>
    <type>DateTime</type>
</CustomField>