force-app/main/default/objects/EI_Site__c/fields/High_Bill_Signed_Up_EI__c.field-meta.xml
<CustomField>
    <fullName>High_Bill_Signed_Up_EI__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Signed up for High Bill.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Signed up for High Bill.</inlineHelpText>
    <label>High Bill Signed Up</label>
    <length>1</length>
    <type>Text</type>
</CustomField>