force-app/main/default/objects/EI_Site__c/fields/High_Usage_Electric_EI__c.field-meta.xml
<CustomField>
    <fullName>High_Usage_Electric_EI__c</fullName>
    <description>Electric High Usage Customer (Y/N)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Electric High Usage Customer (Y/N)</inlineHelpText>
    <label>High Usage Electric</label>
    <length>1</length>
    <type>Text</type>
</CustomField>