force-app/main/default/objects/EI_Site__c/fields/Imported_Email_EI__c.field-meta.xml
<CustomField>
    <fullName>Imported_Email_EI__c</fullName>
    <description>Exact text of the imported email field. May or may not contain a valid email address.  If valid, will be transferred into the &apos;main&apos; email field via a workflow field update.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Exact text of the imported email field. May or may not contain a valid email address.  If valid, will be transferred into the &apos;main&apos; email field via a workflow field update.</inlineHelpText>
    <label>Imported Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>