force-app/main/default/objects/EI_Site__c/fields/Imported_NAICS_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Imported_NAICS_Code_EI__c</fullName>
    <description>Imported NAICS Code for the premise (do not modify)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Imported NAICS Code for the premise (do not modify)</inlineHelpText>
    <label>Imported NAICS Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>