force-app/main/default/objects/EI_Site__c/fields/Imported_Site_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>Imported_Site_Name_EI__c</fullName>
    <description>The imported name of the Site/SA record</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Imported Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>