force-app/main/default/objects/EI_Site__c/fields/Imported_Svc_Desc_EI__c.field-meta.xml
<CustomField>
    <fullName>Imported_Svc_Desc_EI__c</fullName>
    <description>Imported SA service descriptor (do not modify)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Imported SA service descriptor (do not modify)</inlineHelpText>
    <label>Imported Service Descriptor</label>
    <length>254</length>
    <type>Text</type>
</CustomField>