force-app/main/default/objects/EI_Site__c/fields/Language_Comment_EI__c.field-meta.xml
<CustomField>
    <fullName>Language_Comment_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language Comment</label>
    <type>TextArea</type>
</CustomField>