force-app/main/default/objects/EI_Site__c/fields/Last_Audit_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Last_Audit_Date_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Audit Date</label>
    <type>Date</type>
</CustomField>