force-app/main/default/objects/EI_Site__c/fields/Latest_Usage_Period_End_EI__c.field-meta.xml
<CustomField>
    <fullName>Latest_Usage_Period_End_EI__c</fullName>
    <description>Date of the period end of the latest associated usage record</description>
    <inlineHelpText>Date of the period end of the latest associated usage record</inlineHelpText>
    <label>Latest Usage Period End</label>
    <summarizedField>EI_Usage__c.Period_End_EI__c</summarizedField>
    <summaryForeignKey>EI_Usage__c.Site_EI__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>