force-app/main/default/objects/EI_Site__c/fields/Legal_Bus_Name_EI__c.field-meta.xml
<CustomField>
    <fullName>Legal_Bus_Name_EI__c</fullName>
    <description>The legal name of a business is the official name of the person or entity that owns a business</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>The legal name of a business is the official name of the person or entity that owns a business</inlineHelpText>
    <label>Legal Business Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>