force-app/main/default/objects/EI_Site__c/fields/Legislative_Discount_EI__c.field-meta.xml
<CustomField>
    <fullName>Legislative_Discount_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legislative Discount</label>
    <length>1</length>
    <type>Text</type>
</CustomField>