force-app/main/default/objects/EI_Site__c/fields/LIFE_SUPPORT_IND_EI__c.field-meta.xml
<CustomField>
    <fullName>LIFE_SUPPORT_IND_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Support Indicator</label>
    <length>16</length>
    <type>Text</type>
</CustomField>