force-app/main/default/objects/EI_Site__c/fields/Local_Rep_user_EI__c.field-meta.xml
<CustomField>
    <fullName>Local_Rep_user_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites_Svc_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>