force-app/main/default/objects/EI_Site__c/fields/Mailing_City_EI__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>