force-app/main/default/objects/EI_Site__c/fields/Mailing_State_EI__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>