force-app/main/default/objects/EI_Site__c/fields/Mailing_Street_Ln_3_EI__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street_Ln_3_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Street Ln 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>