force-app/main/default/objects/EI_Site__c/fields/Mailing_Zip_EI__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Mailing Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>