force-app/main/default/objects/EI_Site__c/fields/MasterMeter__c.field-meta.xml
<CustomField>
    <fullName>MasterMeter__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Yes No Flag for denoting Master Metered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MasterMeter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>