force-app/main/default/objects/EI_Site__c/fields/Max_kW_Demand_Rollup_EI__c.field-meta.xml
<CustomField>
    <fullName>Max_kW_Demand_Rollup_EI__c</fullName>
    <description>Rolls up the &quot;Max kW Demand&quot; field from the related Usages records</description>
    <inlineHelpText>Max kW Demand from the related Usages records.</inlineHelpText>
    <label>Max kW Demand</label>
    <summarizedField>EI_Usage__c.Max_kW_Demand_EI__c</summarizedField>
    <summaryForeignKey>EI_Usage__c.Site_EI__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>