force-app/main/default/objects/EI_Site__c/fields/MEDICAL_bsln_IND_EI__c.field-meta.xml
<CustomField>
    <fullName>MEDICAL_bsln_IND_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Baseline Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>