force-app/main/default/objects/EI_Site__c/fields/Meter_Type_EI__c.field-meta.xml
<CustomField>
    <fullName>Meter_Type_EI__c</fullName>
    <description>Sevice type</description>
    <inlineHelpText>Sevice type</inlineHelpText>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>