force-app/main/default/objects/EI_Site__c/fields/Mobile_Phone_Number_EI__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number_EI__c</fullName>
    <description>Mobile phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mobile phone number</inlineHelpText>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>