force-app/main/default/objects/EI_Site__c/fields/My_Account_Signed_Up_DateTime_EI__c.field-meta.xml
<CustomField>
    <fullName>My_Account_Signed_Up_DateTime_EI__c</fullName>
    <description>My Account Signed Up DateTime</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>My Account Signed Up DateTime</inlineHelpText>
    <label>My Account Signed Up DateTime</label>
    <type>DateTime</type>
</CustomField>