force-app/main/default/objects/EI_Site__c/fields/My_Account_Signed_Up_EI__c.field-meta.xml
<CustomField>
    <fullName>My_Account_Signed_Up_EI__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Signed up for My Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Signed up for My Account.</inlineHelpText>
    <label>My Account Signed Up</label>
    <length>1</length>
    <type>Text</type>
</CustomField>