force-app/main/default/objects/EI_Site__c/fields/NAICS1_Code_relation_EI__c.field-meta.xml
<CustomField>
    <fullName>NAICS1_Code_relation_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person NAICS Code 1</description>
    <inlineHelpText>Person NAICS Code 1</inlineHelpText>
    <label>NAICS 1 Code</label>
    <referenceTo>EI_NAICS_Code__c</referenceTo>
    <relationshipLabel>Site/Service Agreements (NAICS 1 Code)</relationshipLabel>
    <relationshipName>Site_Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>