force-app/main/default/objects/EI_Site__c/fields/NAICS_Cd_for_Prtnr_Shrng_EI__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Cd_for_Prtnr_Shrng_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NAICS Code for Partner Sharing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>