force-app/main/default/objects/EI_Site__c/fields/NAICS_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_EI__c</fullName>
    <description>NAICS Code for the premise</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>NAICS Code for the premise</inlineHelpText>
    <label>NAICS Code (Delete)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>