force-app/main/default/objects/EI_Site__c/fields/NAICS_Code_relation_EI__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_relation_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the NAICS code associated with the Site / Service Agreement</description>
    <inlineHelpText>This is the NAICS code associated with this SA</inlineHelpText>
    <label>NAICS 2 Code</label>
    <referenceTo>EI_NAICS_Code__c</referenceTo>
    <relationshipLabel>Site/Service Agreements</relationshipLabel>
    <relationshipName>Sites_Svc_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>