force-app/main/default/objects/EI_Site__c/fields/New_CARE_Customer_EI__c.field-meta.xml
<CustomField>
    <fullName>New_CARE_Customer_EI__c</fullName>
    <description>New CARE customer (enrolled in 12 months)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>New CARE customer (enrolled in 12 months)</inlineHelpText>
    <label>Deprecated New CARE Customer</label>
    <length>1</length>
    <type>Text</type>
</CustomField>