force-app/main/default/objects/EI_Site__c/fields/New_Streetlight_SA_EI__c.field-meta.xml
<CustomField>
    <fullName>New_Streetlight_SA_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to create a Streetlight SA</description>
    <inlineHelpText>If checked, this SA is a temporary streetlight SA that was created to support the On-Bill Financing application process.</inlineHelpText>
    <label>New Streetlight SA</label>
    <type>Checkbox</type>
</CustomField>