force-app/main/default/objects/EI_Site__c/fields/Number_of_Employees_EI__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_EI__c</fullName>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>