force-app/main/default/objects/EI_Site__c/fields/Number_Usage_Records_EI__c.field-meta.xml
<CustomField>
    <fullName>Number_Usage_Records_EI__c</fullName>
    <inlineHelpText>Shows the number of related usage records.</inlineHelpText>
    <label>Number of Usage Records</label>
    <summaryForeignKey>EI_Usage__c.Site_EI__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>