force-app/main/default/objects/EI_Site__c/fields/Opportunity_Area_2_EI__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Area_2_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Area 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>