force-app/main/default/objects/EI_Site__c/fields/Opt_Bin_Mndtry_Crtlmnt_EI__c.field-meta.xml
<CustomField>
    <fullName>Opt_Bin_Mndtry_Crtlmnt_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optional Binding Mandatory Curtailment</label>
    <length>1</length>
    <type>Text</type>
</CustomField>