force-app/main/default/objects/EI_Site__c/fields/PDP_PLAN_OPTIONS_EI__c.field-meta.xml
<CustomField>
    <fullName>PDP_PLAN_OPTIONS_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peak Day Price Plan Options</label>
    <length>60</length>
    <type>Text</type>
</CustomField>