force-app/main/default/objects/EI_Site__c/fields/PDP_RSVN_CPCTY_APPLD_VAL_EI__c.field-meta.xml
<CustomField>
    <fullName>PDP_RSVN_CPCTY_APPLD_VAL_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peak Day Price Plan Reservation Capacity</label>
    <length>254</length>
    <type>Text</type>
</CustomField>