force-app/main/default/objects/EI_Site__c/fields/PDP_START_DATE_EI__c.field-meta.xml
<CustomField>
    <fullName>PDP_START_DATE_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peak Day Price Start Date of Enrollment</label>
    <type>Date</type>
</CustomField>