force-app/main/default/objects/EI_Site__c/fields/PDP_STOP_DATE_EI__c.field-meta.xml
<CustomField>
    <fullName>PDP_STOP_DATE_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peak Day Price Stop Date  of Enrollment</label>
    <type>Date</type>
</CustomField>