force-app/main/default/objects/EI_Site__c/fields/Peak_Day_Pricing_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Peak_Day_Pricing_Ind_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Peak Day Pricing Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>