force-app/main/default/objects/EI_Site__c/fields/Peak_Demand_Actual_EI__c.field-meta.xml
<CustomField>
    <fullName>Peak_Demand_Actual_EI__c</fullName>
    <description>The actual peak demand value, based on the usage data</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>The actual peak demand value, based on the usage data</inlineHelpText>
    <label>Peak Demand Actual</label>
    <length>10</length>
    <type>Text</type>
</CustomField>