force-app/main/default/objects/EI_Site__c/fields/Peak_Demand_EI__c.field-meta.xml
<CustomField>
    <fullName>Peak_Demand_EI__c</fullName>
    <label>Peak Demand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 100 kW</fullName>
            </value>
            <value>
                <fullName>&gt; 100 kW</fullName>
            </value>
            <value>
                <fullName>Determined by Customer</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>