force-app/main/default/objects/EI_Site__c/fields/Person_ID_EI__c.field-meta.xml
<CustomField>
    <fullName>Person_ID_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>