force-app/main/default/objects/EI_Site__c/fields/Phone_1_EI__c.field-meta.xml
<CustomField>
    <fullName>Phone_1_EI__c</fullName>
    <description>Contact phone 1</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Contact phone 1</inlineHelpText>
    <label>Phone 1</label>
    <type>Phone</type>
</CustomField>