force-app/main/default/objects/EI_Site__c/fields/Phone_2_EI__c.field-meta.xml
<CustomField>
    <fullName>Phone_2_EI__c</fullName>
    <description>Contact phone 2</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Contact phone 2</inlineHelpText>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>